--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <nav class="grey darken-4" role="navigation">
         <div class="nav-wrapper container">
           <a id="logo-container" href="#" class="brand-logo">
-            <img src="http://www.satasammutin.fi/images/object1632450244.png" alt="">
+              Satasammutin Oy
+              <!-- <img src="http://www.satasammutin.fi/images/object1632450244.png" alt=""> -->
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
