--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <p>Myymme myös hitsauskoneita, -kaasua ja -tarvikkeita, nestekaasua, työsuojelu- tarvikkeita ja paloalan tarvikkeita.</p>
 
-        <p>Tuotemerkkejä ovat mm. Arskan sammuttimet ja Woikosken hitsauskaasut</p>
+        <p>Tuotemerkkejä ovat mm. Arska -sammuttimet ja Woikosken hitsauskaasut</p>
       </div>
 
       <br>
