Prettier ja pieniä muutoksia

--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0"
+    />
+    <title>Satasammutin Oy</title>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>Satasammutin Oy</title>
+    <!-- CSS  -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="css/materialize.css"
+      type="text/css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+    <link
+      href="css/style.css"
+      type="text/css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+  </head>
 
-  <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-</head>
-
-<body>
-  <header>
-
-    <div class="navbar-fixed">
+  <body>
+    <header>
       <nav class="grey darken-4" role="navigation">
         <div class="nav-wrapper container">
           <a id="logo-container" href="#" class="brand-logo">
-              Satasammutin Oy
-              <!-- <img src="http://www.satasammutin.fi/images/object1632450244.png" alt=""> -->
+            Satasammutin Oy
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
@@ -33,125 +45,153 @@
               <a href="#yhteystiedot">Yhteystiedot</a>
             </li>
           </ul>
-
           <a href="#" data-target="nav-mobile" class="sidenav-trigger">
             <i class="material-icons">menu</i>
           </a>
         </div>
       </nav>
-    </div>
-    <ul id="nav-mobile" class="sidenav">
-      <li>
-        <a href="#yritys">Yritys</a>
-      </li>
-      <li>
-        <a href="#palvelut">Palveluitamme</a>
-      </li>
-      <li>
-        <a href="#yhteystiedot">Yhteystiedot</a>
-      </li>
-    </ul>
-  </header>
+      <ul id="nav-mobile" class="sidenav">
+        <li>
+          <a href="#yritys">Yritys</a>
+        </li>
+        <li>
+          <a href="#palvelut">Palveluitamme</a>
+        </li>
+        <li>
+          <a href="#yhteystiedot">Yhteystiedot</a>
+        </li>
+      </ul>
+    </header>
 
-  <main>
-    <div class="container">
-      <div class="section" id="yritys">
-        <div class="row">
-          <div class="col s12">
-            <h2>Yritys</h2>
-            <p>Satasammutin myy, huoltaa ja tarkastaa sammuttimia.</p>
-            <p>Lisäksi yritys myy hitsauskoneita, -kaasua ja -tarvikkeita sekä nestekaasua ja työsuojelutarvikkeita. Satasammutimella
-              on myös paloalan myyntiä, kuten varoittimia ja sammutuspeitteitä.</p>
-            <p>Asiakkaista noin 70 prosenttia on muita yrityksiä. Satasammutin työllistää nykyisen omistajansa Tapio Myllymäen,
-              joka on työskennellyt yrityksessä 1990-luvun alkupuolta lähtien.</p>
-            <p>Satasammutin on perustettu vuonna 1989. Vuonna 1995 yritys muuttui osakeyhtiöksi. Yritys toimi 90-luvun alusta
-              Knuuttilankadulla Kankaanpäässä, mutta muutti 2004 Koskenojankadulle.</p>
-            <p>Satasammutin on Turvatekniikan keskuksen rekisteröimä käsisammuttimien huolto- ja tarkastustöihin oikeutettu
-              liike.
-            </p>
-            <p></p>
-          </div>
-        </div>
-      </div>
-      <div class="divider"></div>
-      <div class="section" id="palvelut">
-        <h2>Palveluitamme</h2>
-        <p>Myymme, huollamme ja tarkistamme sammuttimia.</p>
-
-        <p>Myymme myös hitsauskoneita, -kaasua ja -tarvikkeita, nestekaasua, työsuojelu- tarvikkeita ja paloalan tarvikkeita.</p>
-
-        <p>Tuotemerkkejä ovat mm. Arska -sammuttimet ja Woikosken hitsauskaasut</p>
-      </div>
-
-      <br>
-      <br>
-    </div>
-  </main>
-  <footer class="page-footer grey darken-2">
-    <div class="container" id="yhteystiedot">
-      <div class="row">
-
-        <div class="col l4 s12">
-          <div class="row">
-            <h5 class="white-font">Aukioloajat</h5>
-            <p class="grey-text text-lighten-4">Arkisin kello 09.00 - 16.30</p>
-          </div>
-          <div class="row">
-            <h5 class="white-font">Osoite</h5>
-            <p class="grey-text text-lighten-4">Koskenojankatu 2, 38700 Kankaanpää</p>
-          </div>
-
-        </div>
-
-
-        <div class="col l5 s12">
-          <div class="row">
-            <h5 class="white-font">Ota yhteyttä</h5>
-          </div>
-          <div class="row">
-            <ul class="yhteystiedot">
-              <li>
-                <i class="material-icons" title="Puhelinnumero">call</i>
-                <a href="tel://+358445723636" class="white-font">044-572 3636</a>
-                &nbsp;/&nbsp;
-                <a href="tel://+358025723636" class="white-font">(02) 572 3636</a>
-              </li>
-              <li>
-                <i class="material-icons" title="E-mail">email</i>
-                <a class="white-font" href="mailto:satasammutin.oy@dnainternet.net" target="_top">satasammutin.oy@dnainternet.net</a>
-              </li>
-              <li>
-                <i class="material-icons" title="Fax">print</i>
-                <a href="tel://+358025723636" class="white-font">+358 0 2572 3636</a>
-              </li>
-            </ul>
-            <p class="white-font" href="#!">Y-tunnus 0755926-1</p>
-          </div>
-        </div>
-
-        <div class="col l3 s12">
-          <div class="row">
-            <iframe height="240" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Koskenojankatu%202+(Satasammutin%20Oy)&amp;ie=UTF8&amp;t=&amp;z=15&amp;iwloc=B&amp;output=embed"
-              frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
-
-            </iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
+    <main>
       <div class="container">
-        &copy; Satasammutin Oy
+        <div class="section" id="yritys">
+          <div class="row">
+            <div class="col s12">
+              <h2>Yritys</h2>
+              <p>Satasammutin myy, huoltaa ja tarkastaa sammuttimia.</p>
+              <p>
+                Lisäksi yritys myy hitsauskoneita, -kaasua ja -tarvikkeita sekä
+                nestekaasua ja työsuojelutarvikkeita. Satasammutimella on myös
+                paloalan myyntiä, kuten varoittimia ja sammutuspeitteitä.
+              </p>
+              <p>
+                Asiakkaista noin 70 prosenttia on muita yrityksiä. Satasammutin
+                työllistää nykyisen omistajansa Tapio Myllymäen, joka on
+                työskennellyt yrityksessä 1990-luvun alkupuolta lähtien.
+              </p>
+              <p>
+                Satasammutin on perustettu vuonna 1989. Vuonna 1995 yritys
+                muuttui osakeyhtiöksi. Yritys toimi 90-luvun alusta
+                Knuuttilankadulla Kankaanpäässä, mutta muutti 2004
+                Koskenojankadulle.
+              </p>
+              <p>
+                Satasammutin on Turvatekniikan keskuksen rekisteröimä
+                käsisammuttimien huolto- ja tarkastustöihin oikeutettu liike.
+              </p>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="divider"></div>
+        <div class="section" id="palvelut">
+          <h2>Palveluitamme</h2>
+          <p>Myymme, huollamme ja tarkistamme sammuttimia.</p>
+
+          <p>
+            Myymme myös hitsauskoneita, -kaasua ja -tarvikkeita, nestekaasua,
+            työsuojelu- tarvikkeita ja paloalan tarvikkeita.
+          </p>
+
+          <p>
+            Tuotemerkkejä ovat mm. Arska -sammuttimet ja Woikosken hitsauskaasut
+          </p>
+        </div>
+
+        <br />
+        <br />
       </div>
-    </div>
-  </footer>
+    </main>
+    <footer class="page-footer grey darken-2">
+      <div class="container" id="yhteystiedot">
+        <div class="row">
+          <div class="col l4 s12">
+            <div class="row">
+              <h5 class="white-font">Aukioloajat</h5>
+              <p class="grey-text text-lighten-4">
+                Arkisin kello 09.00 - 16.30
+              </p>
+            </div>
+            <div class="row">
+              <h5 class="white-font">Osoite</h5>
+              <p class="grey-text text-lighten-4">
+                Koskenojankatu 2, 38700 Kankaanpää
+              </p>
+            </div>
+          </div>
 
+          <div class="col l5 s12">
+            <div class="row">
+              <h5 class="white-font">Ota yhteyttä</h5>
+            </div>
+            <div class="row">
+              <ul class="yhteystiedot">
+                <li>
+                  <i class="material-icons" title="Puhelinnumero">call</i>
+                  <a href="tel://+358445723636" class="white-font"
+                    >044-572 3636</a
+                  >
+                  &nbsp;/&nbsp;
+                  <a href="tel://+358025723636" class="white-font"
+                    >(02) 572 3636</a
+                  >
+                </li>
+                <li>
+                  <i class="material-icons" title="E-mail">email</i>
+                  <a
+                    class="white-font"
+                    href="mailto:satasammutin.oy@dnainternet.net"
+                    target="_top"
+                    >satasammutin.oy@dnainternet.net</a
+                  >
+                </li>
+                <li>
+                  <i class="material-icons" title="Fax">print</i>
+                  <a href="tel://+358025723636" class="white-font"
+                    >+358 0 2572 3636</a
+                  >
+                </li>
+              </ul>
+              <p class="white-font" href="#!">Y-tunnus 0755926-1</p>
+            </div>
+          </div>
 
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+          <div class="col l3 s12">
+            <div class="row">
+              <iframe
+                height="240"
+                src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Koskenojankatu%202+(Satasammutin%20Oy)&amp;ie=UTF8&amp;t=&amp;z=15&amp;iwloc=B&amp;output=embed"
+                frameborder="0"
+                scrolling="no"
+                marginheight="0"
+                marginwidth="0"
+              >
+              </iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          &copy; Satasammutin Oy
+        </div>
+      </div>
+    </footer>
 
-</body>
-
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
+  </body>
 </html>
