Teksti tukes linkiksi

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 Koskenojankadulle.
               </p>
               <p>
-                Satasammutin on Turvatekniikan keskuksen rekisteröimä
+                Satasammutin on <a href="https://tukes.fi/etusivu" target="_">Tukesin</a> rekisteröimä
                 käsisammuttimien huolto- ja tarkastustöihin oikeutettu liike.
               </p>
               <p></p>
