Logo ja värimuutokset

--- a/index.html
+++ b/index.html
@@ -29,22 +29,28 @@
 
   <body>
     <header>
-      <nav class="grey darken-4" role="navigation">
+      <nav style="background-color: #f7941e !important;" role="navigation">
         <div class="nav-wrapper container">
           <a id="logo-container" href="#" class="brand-logo">
-            Satasammutin Oy
+            <img style="margin-left: -2rem" src="logo-resized.png" />
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
-              <a href="#yritys">Yritys</a>
+              <a class="grey-text text-darken-4" href="#yritys">Yritys</a>
             </li>
             <li>
-              <a href="#palvelut">Palveluitamme</a>
+              <a class="grey-text text-darken-4" href="#palvelut"
+                >Palveluitamme</a
+              >
             </li>
+
             <li>
-              <a href="#yhteystiedot">Yhteystiedot</a>
+              <a class="grey-text text-darken-4" href="#yhteystiedot"
+                >Yhteystiedot</a
+              >
             </li>
           </ul>
+
           <a href="#" data-target="nav-mobile" class="sidenav-trigger">
             <i class="material-icons">menu</i>
           </a>
@@ -64,6 +70,7 @@
     </header>
 
     <main>
+      <div class="divider"></div>
       <div class="container">
         <div class="section" id="yritys">
           <div class="row">
@@ -87,8 +94,10 @@
                 Koskenojankadulle.
               </p>
               <p>
-                Satasammutin on <a href="https://tukes.fi/etusivu" target="_">Tukesin</a> rekisteröimä
-                käsisammuttimien huolto- ja tarkastustöihin oikeutettu liike.
+                Satasammutin on
+                <a href="https://tukes.fi/etusivu" target="_">Tukesin</a>
+                rekisteröimä käsisammuttimien huolto- ja tarkastustöihin
+                oikeutettu liike.
               </p>
               <p></p>
             </div>
@@ -108,24 +117,25 @@
             Tuotemerkkejä ovat mm. Arska -sammuttimet ja Woikosken hitsauskaasut
           </p>
         </div>
+        <br />
+        <br />
 
-        <br />
-        <br />
+        <div class="divider"></div>
       </div>
     </main>
-    <footer class="page-footer grey darken-2">
+    <footer class="page-footer" style="background-color: #fff;">
       <div class="container" id="yhteystiedot">
         <div class="row">
           <div class="col l4 s12">
             <div class="row">
-              <h5 class="white-font">Aukioloajat</h5>
-              <p class="grey-text text-lighten-4">
+              <h5 class="dark-font">Aukioloajat</h5>
+              <p class="dark-font-lighten">
                 Arkisin kello 09.00 - 16.30
               </p>
             </div>
             <div class="row">
-              <h5 class="white-font">Osoite</h5>
-              <p class="grey-text text-lighten-4">
+              <h5 class="dark-font">Osoite</h5>
+              <p class="dark-font-lighten">
                 Koskenojankatu 2, 38700 Kankaanpää
               </p>
             </div>
@@ -133,37 +143,39 @@
 
           <div class="col l5 s12">
             <div class="row">
-              <h5 class="white-font">Ota yhteyttä</h5>
+              <h5 class="dark-font">Ota yhteyttä</h5>
             </div>
             <div class="row">
               <ul class="yhteystiedot">
                 <li>
-                  <i class="material-icons" title="Puhelinnumero">call</i>
-                  <a href="tel://+358445723636" class="white-font"
+                  <i class="material-icons dark-font" title="Puhelinnumero"
+                    >call</i
+                  >
+                  <a href="tel://+358445723636" class="dark-font-lighten"
                     >044-572 3636</a
                   >
-                  &nbsp;/&nbsp;
-                  <a href="tel://+358025723636" class="white-font"
+                  &nbsp<span class="dark-font-lighten">/</span>&nbsp
+                  <a href="tel://+358025723636" class="dark-font-lighten"
                     >(02) 572 3636</a
                   >
                 </li>
                 <li>
-                  <i class="material-icons" title="E-mail">email</i>
+                  <i class="material-icons dark-font" title="E-mail">email</i>
                   <a
-                    class="white-font"
+                    class="dark-font-lighten"
                     href="mailto:satasammutin.oy@dnainternet.net"
                     target="_top"
                     >satasammutin.oy@dnainternet.net</a
                   >
                 </li>
                 <li>
-                  <i class="material-icons" title="Fax">print</i>
-                  <a href="tel://+358025723636" class="white-font"
+                  <i class="material-icons dark-font" title="Fax">print</i>
+                  <a href="tel://+358025723636" class="dark-font-lighten"
                     >+358 0 2572 3636</a
                   >
                 </li>
               </ul>
-              <p class="white-font" href="#!">Y-tunnus 0755926-1</p>
+              <p class="dark-font" href="#!">Y-tunnus 0755926-1</p>
             </div>
           </div>
 
@@ -183,7 +195,7 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <div class="container">
+        <div class="container dark-font">
           &copy; Satasammutin Oy
         </div>
       </div>
