Lisätty Woikosken linkki

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <nav style="background-color: #f7941e !important;" role="navigation">
         <div class="nav-wrapper container">
           <a id="logo-container" href="#" class="brand-logo">
-            <img style="margin-left: -2rem" src="logo-resized.png" />
+            <img src="logo-resized.png" />
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
@@ -114,7 +114,7 @@
           </p>
 
           <p>
-            Tuotemerkkejä ovat mm. Arska -sammuttimet ja Woikosken hitsauskaasut
+            Tuotemerkkejä ovat mm. Arska -sammuttimet ja <a href="http://www.woikoski.fi/" target="_">Woikosken</a> hitsauskaasut
           </p>
         </div>
         <br />
